indexStyles.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}
.lineSpacing{
    visibility: hidden;
}

header {
    width: 100%;
    margin-top: 15px;
    background-color: white;
    border-top: 1px solid lightgrey; 
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    overflow-x: hidden;
}
header div {
    margin-top: 10px;
    flex-basis: 30%;
    padding: 10px;
    margin: 0px;
}

header div img {
    width: 90%;
}

header div.hospDes {
    flex: 9;
    font-size: 250%;
    font-family: 'Montserrat', sans-serif;
}

header div.hospLogo {
    flex: 1;
}
header div.hospLogo img{
    height: 110px;
    margin-left: 15px;
}
header div.hospDes{
    margin-left: 20px;
    margin-top: 10px;
}

header div.headInfo {
    display: flex;
    flex-direction: column;
    flex: 5;
    background-color: white;
    border-left: 1px solid rgb(228, 227, 227);
}

header div.headInfo div.phone {
    flex: 3;
    border-bottom: 1px solid rgb(228, 227, 227);
    font-family: 'Montserrat', sans-serif;
}
#display{
    display: inline;
}
#display:active{
    cursor: pointer;
    background-color: rgb(207, 206, 206);
}


.phone img, .opdTimes img{
    width: 12px;
}
.location img{
    width: 22px;
    margin-left: -5px;
    margin-bottom: -5px;
}

header div.headInfo div.opdTimes {
    flex: 3;
    border-bottom: 1px solid rgb(228, 227, 227);
    font-family: 'Montserrat', sans-serif;
}

header div.headInfo div.location {
    flex: 1;
    font-family: 'Montserrat', sans-serif;
}

header div.headInfo div.location a{
    border: none;
    text-decoration: none;
    background-color: white;
    color: black;
    border-radius: 5px;
    padding: 2px 5px;
    margin-left: 5px;
    -webkit-transition: background 0s;
    transition: background 1s;
}
header div.headInfo div.location a:hover{
    cursor: pointer;
    background-color: rgb(1, 36, 151);
    color: white;
}
.navBlock{
    position: sticky;
    top: 0px;
    z-index: 1000;
}

.navBar {
    z-index: 1000;
    overflow-x: hidden;
    width: 100%;
    background-color: rgb(236, 236, 236);
    position: sticky;
    top: 0px;
}

.mainMenu {
    overflow: auto;
    width: 100%;
    display: flex;
}

.mainMenu li {
    list-style: none;
    padding: 15px;
    margin: 6px;
}

.mainMenu li.link a {
    display: inline-block;
    text-decoration: none;
    color: rgb(63, 63, 63);
    font-size: 1.2rem;
    font-family: 'Montserrat', sans-serif;
    border-radius: 4px;
    margin: 0px 10px;
}

.mainMenu li.link a:hover {
    color: black;
    font-weight: bold;
}
.navBar .openMenu {
    font-size: 2rem;
    margin: 20px;
    display: none;
    cursor: pointer;
}

.mainMenu li.button {
    background-color: rgb(236, 236, 236);
    border-radius: 5px;
    margin-left: 10px;
}

.mainMenu li.button a {
    font-size: 1.2rem;
    font-family: 'Montserrat', sans-serif;
    text-decoration: none;
    background-color: forestgreen;
    padding: 10px 15px 10px 15px;
    border-radius: 5px;
    color: white;
    font-weight: bold;
    -webkit-transition: background 0s;
    transition: background 1s;
}

.mainMenu li.button a:hover {
    background-color: rgb(1, 36, 151);
}
.navBar .mainMenu .closeMenu , .icons i {
    font-size: 2rem;
    display: none;
    cursor: pointer;
}
.fa-linkedin:hover {color: rgb(0, 110, 255);}
.fa-instagram:hover {color: rgb(255, 0, 191);}
.fa-github:hover {color: rgb(255, 123, 0);}
.devs{
    display: none;
}

section {
    margin: 5px;
    padding: 10px;
    overflow-x: hidden;
    font-family: 'Montserrat', sans-serif;
}

div.homeSec {
    display: flex;
    padding-top: 20px;
}

div.homeSec div.homeLeft {
    margin: 10px;
    padding: 10px;
    flex: 1;
}

div.homeSec div.homeLeft div.homeTitle h1 {
    margin: 5px 0px 20px 0px;
    font-size: 300%;
    font-family: 'Montserrat', sans-serif;
    color: rgb(1, 25, 104);
    animation: downway 3s ease-in-out 0.5s 1;
}
@keyframes downway{
    0%{
        margin-bottom: -10px;
    }
    75%{
        margin-bottom: 20px;
    }
}

div.homeSec div.homeLeft div.homeTitle p {
    margin: 5px 0px 20px 0px;
    font-family: 'Montserrat', sans-serif;
    color: rgb(107, 107, 107);
    line-height: 1.6;
    text-align: justify;
}

div.homeSec div.homeLeft div.homeDoctor {
    display: flex;
    width: 100%;
    background-color: white;
}

div.homeSec div.homeLeft div.homeDoctor div.homeDocLogo img {
    width: 75px;
    height: 75px;
    margin: 10px 10px 10px 15px;
    border-radius: 50%;
}

div.homeSec div.homeLeft div.homeDoctor div.homeDocDes {
    margin: 10px;
}

div.homeSec div.homeLeft div.homeDoctor div.homeDocDes h3 {
    font-family: 'Montserrat', sans-serif;
    font-size: 110%;
}

div.homeSec div.homeLeft div.homeDoctor div.homeDocDes p {
    font-family: 'Montserrat', sans-serif;
    color: rgb(90, 90, 90);
}

div.homeSec div.homeRight {
    flex: 1;
    border-radius: 30px;;
}

div.homeSec div.homeRight img {
    width: 100%;
    border-radius:30px;
}
.scrolldown2{
    margin-left: 80%;
    margin-bottom: -75px;
    width: 7%;
    height: 100px;
}

.scrolldown2 img{
    width: 100%;
    height: 90px;
}

div.aboutSec {
    display: flex;
    flex-direction: row-reverse;
    background-color: rgb(245, 245, 245);
    border-radius: 25px;
}

div.aboutSec div.aboutLeft {
    margin: 10px;
    padding: 10px;
    flex: 2;
}

div.aboutSec div.aboutLeft div.aboutTitle h1 {
    margin: 5px 0px 20px 0px;
    font-size: 300%;
    font-family: 'Montserrat', sans-serif;
    color: rgb(1, 25, 104);
}

div.aboutSec div.aboutLeft div.aboutTitle p {
    margin: 5px 0px 20px 0px;
    font-family: 'Montserrat', sans-serif;
    color: rgb(107, 107, 107);
    line-height: 1.6;
    text-align: justify;
}

div.aboutSec div.aboutLeft div.aboutDoctor {
    display: flex;
    width: 60%;
    background-color: white;
}
/* ... */

